# thumbdrives

./: COPYING  meson.build  nl.brixit.Thumbdrives.json
data/: meson.build  nl.brixit.Thumbdrives.appdata.xml.in  nl.brixit.Thumbdrives.desktop.in  nl.brixit.Thumbdrives.gschema.xml  nl.brixit.Thumbdrives.policy
po/: POTFILES  meson.build
src/: main.py  meson.build  pk-thumbdrive-action.sh  thumbdrives.gresource.xml  thumbdrives.in  vdisk.py  window.py  window.ui
